--- a/src/app.sass
+++ b/src/app.sass
@@ -1,8 +1,17 @@
+body
+  background-color: #e9ebee
+.data-reactroot
+  height: 100% !important
 .wrapper
-  display: flex
-  align-items: stretch
+  color: #333
 
-
-#sidebar
-  min-width: 250px
-  max-width: 250px
+html
+  height: 100vh
+body
+  height: 100vh
+#root
+  height: 100vh
+.App
+  height: 100vh
+.wrapper
+  height: 100vh
