--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,23 @@
-.wrapper {
-  display: flex;
-  align-items: stretch; }
+body {
+  background-color: #e9ebee; }
 
-#sidebar {
-  min-width: 250px;
-  max-width: 250px; }
+.data-reactroot {
+  height: 100% !important; }
+
+.wrapper {
+  color: #333; }
+
+html {
+  height: 100vh; }
+
+body {
+  height: 100vh; }
+
+#root {
+  height: 100vh; }
+
+.App {
+  height: 100vh; }
+
+.wrapper {
+  height: 100vh; }
