can switch users

--- a/src/sidebar.sass
+++ b/src/sidebar.sass
@@ -14,6 +14,13 @@
       div
         display: inline-block
         padding-right: 5px
+      .switch-user
+        font-size: .6em
+        font-weight: 600
+        color: #333
+        text-transform: uppercase
+        padding-left: 10px
+
     .user
       background-color: #fff
       padding: 5px
@@ -28,3 +35,12 @@
       .user-icon
         display: inline-block
         margin-left: 5px
+    .user.switch
+      .online
+        background: #fff
+        display: inline-block
+        width: 10px
+        height: 10px
+        border-radius: 50%
+        margin-right: 5px
+        border: 2px solid  #aaa
