--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -11,6 +11,12 @@
   #sidebar .current-users .current-user div {
     display: inline-block;
     padding-right: 5px; }
+  #sidebar .current-users .current-user .switch-user {
+    font-size: .6em;
+    font-weight: 600;
+    color: #333;
+    text-transform: uppercase;
+    padding-left: 10px; }
   #sidebar .current-users .user {
     background-color: #fff;
     padding: 5px;
@@ -25,3 +31,11 @@
     #sidebar .current-users .user .user-icon {
       display: inline-block;
       margin-left: 5px; }
+  #sidebar .current-users .user.switch .online {
+    background: #fff;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
+    border: 2px solid  #aaa; }
