--- a/src/app.sass
+++ b/src/app.sass
@@ -15,3 +15,10 @@ body
   height: 100vh
 .wrapper
   height: 100vh
+  display: flex
+  flex-direction: row
+  #content
+    display: flex
+    flex: 1
+    flex-direction: column
+    justify-content: flex-end
