can chat, fixed error with which chats to show, fixed not showing multiple of same chat

--- a/src/footer.css
+++ b/src/footer.css
@@ -52,7 +52,8 @@
       color: #fff; }
     .footer-chats .chat.open .messages {
       padding: 0px 25px 25px 25px;
-      font-size: .8em; }
+      font-size: .8em;
+      height: 200px; }
       .footer-chats .chat.open .messages .message {
         padding-top: 5px;
         width: 100%;
@@ -63,7 +64,8 @@
           border-radius: 20%; }
       .footer-chats .chat.open .messages .message.me {
         text-align: right;
-        justify-content: flex-end; }
+        justify-content: flex-end;
+        color: #fff; }
         .footer-chats .chat.open .messages .message.me span {
           background-color: #4080ff; }
       .footer-chats .chat.open .messages .message.you {
