stock market and easter eggs

--- a/src/footer.css
+++ b/src/footer.css
@@ -27,7 +27,8 @@
   .footer-chats .chat.open {
     background-color: #fff;
     color: #333;
-    min-width: 240px; }
+    min-width: 240px;
+    max-width: 240px; }
     .footer-chats .chat.open .message-form {
       width: 100%; }
       .footer-chats .chat.open .message-form input {
@@ -65,11 +66,13 @@
       .footer-chats .chat.open .messages .message.me {
         text-align: right;
         justify-content: flex-end;
-        color: #fff; }
+        color: #fff;
+        padding-left: 25px; }
         .footer-chats .chat.open .messages .message.me span {
           background-color: #4080ff; }
       .footer-chats .chat.open .messages .message.you {
         text-align: left;
-        justify-content: flex-start; }
+        justify-content: flex-start;
+        padding-right: 25px; }
         .footer-chats .chat.open .messages .message.you span {
           background-color: #e9ebee; }
