--- a/src/footer.sass
+++ b/src/footer.sass
@@ -28,6 +28,7 @@
     background-color: #fff
     color: #333
     min-width: 240px
+    max-width: 240px
     .message-form
       width: 100%
       input
@@ -67,11 +68,12 @@
         text-align: right
         justify-content: flex-end
         color: #fff
+        padding-left: 25px
         span
           background-color: #4080ff
       .message.you
         text-align: left
         justify-content: flex-start
-
+        padding-right: 25px
         span
           background-color: #e9ebee
