--- a/src/footer.sass
+++ b/src/footer.sass
@@ -55,6 +55,7 @@
       padding: 0px 25px 25px 25px
       font-size: .8em
       height: 200px
+      overflow: auto
 
       .message
         padding-top: 5px
